# app/routes/index.ts
@@ -1,10 +1,12 @@
         // /app/routes/index.ts
 import {Request, Response} from "express";
 import {CourseController} from "../contollers/courseController";
+import {UserController} from "../contollers/userController";
 
 export class Routes { 
 
     courseController: CourseController = new CourseController();
+    userController: UserController = new UserController();
 
     public routes(app: any): void { 
         app.route('/')
@@ -32,9 +34,29 @@ export class Routes {
         app.route('/api/courses/:courseId')
             .delete(this.courseController.deleteCourse);
         
+        // Get all users
+        app.route('/api/users')
+            .get(this.userController.getUsers);
+        
+        // Create a new user
+        app.route('/api/users')
+            .post(this.userController.addNewUser);
+        
+        // get a specific user
+        app.route('/api/users/:userId')
+            .get(this.userController.getUserById);
+        
+        // update a specific user
+        app.route('/api/users/:userId')
+            .put(this.userController.updateUser);
+        
+        // delete a specific user
+        app.route('/api/users/:userId')
+            .delete(this.userController.deleteUser);
+        
         // generate dummy data
         app.route('/api/dummy')
-            .get(this.courseController.generateDummyData);
+            .get(this.userController.generateDummyData);
     }
 }
 
